--- a/qt/regression_form.ui
+++ b/qt/regression_form.ui
@@ -13,8 +13,34 @@
   <property name="windowTitle">
    <string>Regression</string>
   </property>
-  <layout class="QGridLayout" name="gridLayout_8">
+  <layout class="QGridLayout" name="gridLayout_9">
    <item row="0" column="0">
+    <widget class="QGroupBox" name="groupBox_8">
+     <property name="title">
+      <string>PCA</string>
+     </property>
+     <layout class="QGridLayout" name="gridLayout_8">
+      <item row="0" column="0">
+       <widget class="QCheckBox" name="checkBox_pca">
+        <property name="text">
+         <string/>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="1">
+       <widget class="QSpinBox" name="spinBox_pca"/>
+      </item>
+      <item row="0" column="2">
+       <widget class="QCheckBox" name="checkBox_pca_mle">
+        <property name="text">
+         <string>mle</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </widget>
+   </item>
+   <item row="0" column="1" colspan="2">
     <widget class="QGroupBox" name="groupBox">
      <property name="title">
       <string>LinearRegression</string>
@@ -36,7 +62,7 @@
      </layout>
     </widget>
    </item>
-   <item row="0" column="2" colspan="2">
+   <item row="0" column="3" colspan="2">
     <widget class="QGroupBox" name="groupBox_3">
      <property name="title">
       <string>DecisionTreeRegressor</string>
@@ -55,7 +81,7 @@
      </layout>
     </widget>
    </item>
-   <item row="1" column="0" colspan="3">
+   <item row="1" column="0" colspan="4">
     <widget class="QGroupBox" name="groupBox_4">
      <property name="title">
       <string>KNeighborsRegressor</string>
@@ -150,7 +176,7 @@
      </layout>
     </widget>
    </item>
-   <item row="1" column="3">
+   <item row="1" column="4">
     <widget class="QGroupBox" name="groupBox_2">
      <property name="title">
       <string>ElasticNet, Lasso</string>
@@ -208,7 +234,7 @@
      </layout>
     </widget>
    </item>
-   <item row="2" column="0">
+   <item row="2" column="0" colspan="2">
     <widget class="QGroupBox" name="groupBox_5">
      <property name="title">
       <string>SVR</string>
@@ -282,7 +308,7 @@
      </layout>
     </widget>
    </item>
-   <item row="2" column="3">
+   <item row="2" column="4">
     <widget class="QGroupBox" name="groupBox_6">
      <property name="title">
       <string>GradientBoostingRegressor</string>
@@ -346,7 +372,7 @@
      </layout>
     </widget>
    </item>
-   <item row="3" column="0" colspan="4">
+   <item row="3" column="0" colspan="5">
     <widget class="QGroupBox" name="groupBox_7">
      <property name="title">
       <string>MLPRegressor</string>
@@ -528,7 +554,7 @@
      </layout>
     </widget>
    </item>
-   <item row="4" column="0">
+   <item row="4" column="0" colspan="2">
     <widget class="QComboBox" name="comboBox_model_ai">
      <item>
       <property name="text">
@@ -572,7 +598,7 @@
      </item>
     </widget>
    </item>
-   <item row="4" column="1">
+   <item row="4" column="2">
     <widget class="QPushButton" name="pushButton_calc_model">
      <property name="text">
       <string>Calc model</string>
