--- a/qt/regression_form.ui
+++ b/qt/regression_form.ui
@@ -631,6 +631,13 @@
      </layout>
     </widget>
    </item>
+   <item row="4" column="4">
+    <widget class="QLabel" name="label_info">
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+   </item>
   </layout>
  </widget>
  <resources/>
