--- a/qt/regression_form.ui
+++ b/qt/regression_form.ui
@@ -638,6 +638,13 @@
      </property>
     </widget>
    </item>
+   <item row="4" column="2">
+    <widget class="QCheckBox" name="checkBox_save">
+     <property name="text">
+      <string>SAVE</string>
+     </property>
+    </widget>
+   </item>
   </layout>
  </widget>
  <resources/>
