--- a/qt/regression_form.ui
+++ b/qt/regression_form.ui
@@ -450,6 +450,13 @@
         </property>
        </widget>
       </item>
+      <item row="0" column="2">
+       <widget class="QCheckBox" name="checkBox_cross_val_save">
+        <property name="text">
+         <string>save</string>
+        </property>
+       </widget>
+      </item>
      </layout>
     </widget>
    </item>
