--- a/qt/domanic_dialog.ui
+++ b/qt/domanic_dialog.ui
@@ -3112,14 +3112,31 @@ selection-color: rgb(85, 0, 0);</string>
                         </widget>
                        </item>
                        <item row="1" column="2">
-                        <widget class="QPushButton" name="pushButton_reg_check_param">
-                         <property name="styleSheet">
-                          <string notr="true">background-color: rgb(250, 221, 255);</string>
-                         </property>
-                         <property name="text">
-                          <string>CHECK</string>
-                         </property>
-                        </widget>
+                        <layout class="QGridLayout" name="gridLayout_102">
+                         <item row="0" column="0">
+                          <widget class="QCheckBox" name="checkBox_reg_features_med">
+                           <property name="toolTip">
+                            <string>Усредненный сбор данных для модели - медиана в интервале</string>
+                           </property>
+                           <property name="text">
+                            <string>median</string>
+                           </property>
+                          </widget>
+                         </item>
+                         <item row="0" column="1">
+                          <widget class="QDoubleSpinBox" name="doubleSpinBox_reg_features_med_int">
+                           <property name="toolTip">
+                            <string>+/- метров от точки</string>
+                           </property>
+                           <property name="decimals">
+                            <number>1</number>
+                           </property>
+                           <property name="value">
+                            <double>1.000000000000000</double>
+                           </property>
+                          </widget>
+                         </item>
+                        </layout>
                        </item>
                       </layout>
                      </item>
