--- a/qt/domanic_dialog.ui
+++ b/qt/domanic_dialog.ui
@@ -3145,7 +3145,7 @@ selection-color: rgb(85, 0, 0);</string>
                    <item row="3" column="0">
                     <layout class="QGridLayout" name="gridLayout_94">
                      <item row="0" column="0">
-                      <layout class="QGridLayout" name="gridLayout_92" columnstretch="3,1,1">
+                      <layout class="QGridLayout" name="gridLayout_92" columnstretch="3,1,1,0">
                        <item row="0" column="0">
                         <widget class="QLabel" name="label_31">
                          <property name="text">
@@ -3154,6 +3154,16 @@ selection-color: rgb(85, 0, 0);</string>
                         </widget>
                        </item>
                        <item row="0" column="2">
+                        <widget class="QPushButton" name="pushButton_calc_reg_model">
+                         <property name="styleSheet">
+                          <string notr="true">background-color: rgb(255, 255, 222);</string>
+                         </property>
+                         <property name="text">
+                          <string>CALC</string>
+                         </property>
+                        </widget>
+                       </item>
+                       <item row="0" column="3">
                         <widget class="QPushButton" name="pushButton_del_reg_model">
                          <property name="font">
                           <font>
@@ -3172,12 +3182,12 @@ selection-color: rgb(85, 0, 0);</string>
                         </widget>
                        </item>
                        <item row="0" column="1">
-                        <widget class="QPushButton" name="pushButton_calc_reg_model">
+                        <widget class="QPushButton" name="pushButton_trained_models_comment">
                          <property name="styleSheet">
-                          <string notr="true">background-color: rgb(255, 255, 222);</string>
+                          <string notr="true">background-color: rgb(191, 255, 191);</string>
                          </property>
                          <property name="text">
-                          <string>CALC</string>
+                          <string>Comment</string>
                          </property>
                         </widget>
                        </item>
